// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<WaveBlock /> renders correctly with bare minimum props 1`] = `
<button
  className="wave-block enabled unselected "
  disabled={undefined}
  onClick={[Function]}
  style={
    Object {
      "flexGrow": 13,
    }
  }
>
  <div
    className="amplitude"
    style={
      Object {
        "height": "0%",
      }
    }
  />
</button>
`;

exports[`<WaveBlock /> renders correctly with bare minimum props, and filler grain 1`] = `
<button
  className="wave-block disabled unselected "
  disabled={true}
  onClick={[Function]}
  style={
    Object {
      "flexGrow": 13,
    }
  }
>
  <div
    className="amplitude"
    style={
      Object {
        "height": "0%",
      }
    }
  />
</button>
`;

exports[`<WaveBlock /> renders correctly with bare minimum props, and grain with amplitude 1`] = `
<button
  className="wave-block enabled unselected "
  disabled={undefined}
  onClick={[Function]}
  style={
    Object {
      "flexGrow": 13,
    }
  }
>
  <div
    className="amplitude"
    style={
      Object {
        "height": "0%",
      }
    }
  />
</button>
`;

exports[`<WaveBlock /> renders correctly with bare minimum props, and maxAmplitude 1`] = `
<button
  className="wave-block enabled unselected "
  disabled={undefined}
  onClick={[Function]}
  style={
    Object {
      "flexGrow": 13,
    }
  }
>
  <div
    className="amplitude"
    style={
      Object {
        "height": "0%",
      }
    }
  />
</button>
`;

exports[`<WaveBlock /> renders correctly with bare minimum props, and more grain 1`] = `
<button
  className="wave-block enabled unselected "
  disabled={undefined}
  onClick={[Function]}
  style={
    Object {
      "flexGrow": 13,
    }
  }
>
  <div
    className="amplitude"
    style={
      Object {
        "height": "0%",
      }
    }
  />
</button>
`;

exports[`<WaveBlock /> renders correctly with bare minimum props, and quiet grain 1`] = `
<button
  className="wave-block enabled unselected quiet"
  disabled={undefined}
  onClick={[Function]}
  style={
    Object {
      "flexGrow": 13,
    }
  }
>
  <div
    className="amplitude"
    style={
      Object {
        "height": "0%",
      }
    }
  />
</button>
`;

exports[`<WaveBlock /> renders correctly with bare minimum props, and selected 1`] = `
<button
  className="wave-block enabled selected "
  disabled={undefined}
  onClick={[Function]}
  style={
    Object {
      "flexGrow": 13,
    }
  }
>
  <div
    className="amplitude"
    style={
      Object {
        "height": "0%",
      }
    }
  />
</button>
`;
